--- a/docs/jupiter/6.2httpserver.md
+++ b/docs/jupiter/6.2httpserver.md
@@ -5,7 +5,7 @@
 |  名称 | 类型 | 描述 |
 |:--------------|:-----|:-------------------|
 |`host`| string| server的ip地址，默认``127.0.0.1`` |
-|`port`| string| server的port地址 |
+|`port`| int| server的port地址 |
 |`limitListener`| int | 最大监听goroutine数量，待支持|
 |`slowThreshold`| time | 大于耗时，记录慢日志，待支持|
 |`enableTrace`| bool | 是否开启链路，待支持|
